# RemoteFileManager_Server

./: CMakeLists.txt  README.md
include/: applet.h  connector.h  files.h  htonll.h  io.h  protocol.h  settings.h  tcp_sock.h
logger/src/: log.c
src/: applet.c  connector.c  files.c  htonll.c  io.c  main.c  tcp_sock.c
